# EchoGraph

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  app.py  database.py  models.py  requirements.txt  routes.py  schemas.py  upload.py
data/: README.md
docs/: architecture.md  deployment.md  environment.md  getting_started.md  how_to_add_documents.md  ingestion.md  reviewer_checklist.md  validation.md
frontend/: .eslintrc.cjs  .npmrc  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: FilterPanel.tsx  GuidelineViewer.tsx  MatchDetailPanel.tsx  MatchList.tsx  UploadPanel.tsx
frontend/src/hooks/: useGuidelines.ts  useMatches.ts  useUploadDocument.ts
infra/caddy/: Caddyfile
infra/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.ingestion  Dockerfile.processing
infra/kubernetes/base/: api.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  postgres.yaml  qdrant.yaml
ingestion/: __init__.py  cli.py  config.py  download.py  extract.py  pipeline.py
ingestion/workflows/: cloud_guideline_ingestion.json
processing/: __init__.py  chunking.py  cleanup.py  embeddings.py  matching.py
scripts/: download_demo_documents.py  export_caddy_root_ca.py  sync_keycloak_credentials.py
tests/: test_api.py  test_ingestion.py  test_matching.py  test_sync_keycloak_credentials.py
